# coreutils

./: Cargo.toml  README.md  build.rs  coreutils.iss
.pipelines/: 1espt-release.yml  tsa.json
.pipelines/templates/: job-build-project.yml
src/: main.rs  pwsh-install-template.ps1  pwsh-install.ps1
